--- a/StoryTowerWeb/package.json
+++ b/StoryTowerWeb/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "apollo-server-express": "^3.12.0",
     "bcrypt": "^5.1.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "faker": "^5.5.3",
     "graphql": "^16.7.1",
