--- a/StoryTower/package.json
+++ b/StoryTower/package.json
@@ -15,7 +15,11 @@
     "puppeteer-core": "^20.9.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
-    "react-native-webview": "^13.3.0"
+    "react-native-svg": "^13.10.0",
+    "react-native-svg-uri": "^0.0.1",
+    "react-native-vector-icons": "^10.0.0",
+    "react-native-webview": "^13.3.0",
+    "xmldom": "^0.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -25,12 +29,15 @@
     "@react-native/metro-config": "^0.72.9",
     "@tsconfig/react-native": "^3.0.0",
     "@types/react": "^18.0.24",
+    "@types/react-native-svg-uri": "^1.2.4",
+    "@types/react-native-vector-icons": "^6.4.13",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.76.7",
     "prettier": "^2.4.1",
+    "react-native-svg-transformer": "^1.1.0",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
   },
