--- a/StoryTowerWeb/package.json
+++ b/StoryTowerWeb/package.json
@@ -18,6 +18,7 @@
     "graphql": "^16.7.1",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.1",
+    "node-cron": "^3.0.2",
     "nodemon": "^3.0.1",
     "puppeteer-core": "^20.9.0"
   }
