--- a/StoryTowerEx/package.json
+++ b/StoryTowerEx/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@apollo/client": "^3.7.17",
     "@expo/webpack-config": "^18.1.2",
-    "@react-native-async-storage/async-storage": "^1.19.1",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "expo": "~49.0.5",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
