--- a/StoryTowerEx/package.json
+++ b/StoryTowerEx/package.json
@@ -10,14 +10,14 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.17",
-    "@expo/webpack-config": "^18.1.2",
     "@react-native-async-storage/async-storage": "1.18.2",
     "expo": "~49.0.5",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.3",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "expo-updates": "~0.18.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
