--- a/StoryTowerEx/package.json
+++ b/StoryTowerEx/package.json
@@ -11,13 +11,15 @@
   "dependencies": {
     "@apollo/client": "^3.7.17",
     "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/stack": "^6.3.17",
     "expo": "~49.0.5",
     "expo-status-bar": "~1.6.0",
+    "expo-updates": "~0.18.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.3",
-    "react-native-web": "~0.19.6",
-    "expo-updates": "~0.18.11"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
