--- a/StoryTowerWeb/package.json
+++ b/StoryTowerWeb/package.json
@@ -20,6 +20,9 @@
     "mongoose": "^7.4.1",
     "node-cron": "^3.0.2",
     "nodemon": "^3.0.1",
-    "puppeteer-core": "^20.9.0"
+    "puppeteer": "^22.6.3",
+    "puppeteer-core": "^20.9.0",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-adblocker": "^2.13.6"
   }
 }
